# andes-sdk

./: .gitignore  Cargo.toml
examples/blank_project/: .gitignore  CMakeLists.txt  metadata.yml
examples/blank_project/resources/: andes_resources.c  config.yml  resources.yml
examples/blank_project/src/: main.c
src/: main.rs  metadata.rs  resources.rs  utils.rs
src/resources/: audio.rs  palette.rs  rawdata.rs  spriteset.rs  tilemap.rs  tileset.rs
toolchain/api/include/: andes.h  andes_audio.h  andes_events.h  andes_graphics.h  andes_graphics_maps.h  andes_graphics_palette.h  andes_graphics_sprites.h  andes_graphics_tiles.h  andes_input.h  andes_res_types.h  andes_storage.h  andes_system.h
toolchain/api/src/: andes.c  andes_audio.c  andes_events.c  andes_graphics.c  andes_graphics.maps.c  andes_graphics_maps.c  andes_graphics_palette.c  andes_graphics_sprites.c  andes_graphics_tiles.c  andes_input.c  andes_storage.c
toolchain/cmake/: app.cmake  target-wasm.cmake  target-xtensa.cmake
toolchain/yaml/: metadata_config.schema.json  resource_config.schema.json  spriteset_settings.schema.json
