[package]
name = "andk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = "4.5.23"
md5 = "0.7.0"
png = "0.17.15"
same-file = "1.0.6"
serde = { version = "1.0.216", features = ["derive"] }
serde_yml = "0.0.12"
serialport = "4.7.0"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.9"
tiled = "0.14.0"
